# RinR

./: Cargo.toml  README.md
src/: command.rs  event.rs  fortnite.rs  helper.rs  join.rs  main.rs  poll.rs  predict.rs  santa.rs  timer.rs  token.env  voice.rs
src/config/: config.json
