[package]
name = "RinR"
version = "0.1.2"
edition = "2021"


[dependencies]
tokio = { version = "1.39.3", features = [
        "macros",
        "rt-multi-thread",]}
serenity = { version = "0.12.2", default-features = false, features = ["utils", "client", "gateway", "standard_framework","rustls_backend", "model", "unstable_discord_api", "cache", "voice"]}
strum = { version = "0.26.3", features = ["derive"]}
strum_macros = "0.26.4"
async-mutex = "1.4.0"
regex = "1.10.6"
rustube = {version = "0.6.0"}
#rustube = {path="../rustube_custom"}
hrtime = "0.2.0"
songbird = { version = "^0.4.3", features = ["driver", "serenity"]}
audiopus_sys = "0.2.2"
dotenv = "0.15.0"
rand = "0.8.5"
youtube_dl = "0.10.0"
fortnite-api = "0.1.3"
reqwest = "0.12.7"
chrono = "0.4.38"
serde = "1.0.209"
serde_json = "1.0.127"
lazy_static = "1.5.0"
thirtyfour = "0.33.1"
scraper = "0.20.0"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
strip = "symbols"
#lto = "fat"
incremental = true

[features]
default = []
old_downloader = []
delete_annotation = []